--- a/School_Project_BlogPost.css
+++ b/School_Project_BlogPost.css
@@ -1,9 +1,6 @@
 body {
-	background-color: "#fbf7f5";
-	background-image: url ("images/new_donuts.jpg");
-	
-	font-family: "Futura";
-	
+	background-image: url ("images/new_new_donuts.jpg");
+	font-family: "Futura";	
 }
 
 h1{
